--- a/hw_rel_ext.ipynb
+++ b/hw_rel_ext.ipynb
@@ -255,6 +255,7 @@
    "outputs": [],
    "source": [
     "def glove_middle_featurizer(kbt, corpus, np_func=np.sum):\n",
+    "#     kbt = knowledge base triples\n",
     "    reps = []\n",
     "    for ex in corpus.get_examples_for_entities(kbt.sbj, kbt.obj):\n",
     "        for word in ex.middle.split():\n",
@@ -280,7 +281,7 @@
     "    splits,\n",
     "    train_split='train',\n",
     "    test_split='dev',\n",
-    "    featurizers=[glove_middle_featurizer],    \n",
+    "    featurizers=[glove_middle_featurizer],\n",
     "    vectorize=False, # Crucial for this featurizer!\n",
     "    verbose=True)"
    ]
@@ -326,11 +327,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn import svm\n",
     "def run_svm_model_factory():\n",
     "    \n",
     "    ##### YOUR CODE HERE\n",
-    "\n",
-    "\n"
+    "    model_factory = lambda: svm.SVC(kernel='linear')\n",
+    "    svc_results = rel_ext.experiment(\n",
+    "        splits,\n",
+    "        train_split = 'train',\n",
+    "        test_split = 'dev',\n",
+    "        featurizers=featurizers,\n",
+    "        model_factory = model_factory,\n",
+    "        vectorize = True,\n",
+    "        verbose=True)\n",
+    "    return svc_results\n"
    ]
   },
   {
@@ -390,14 +400,27 @@
     "    object_subject_suffix = \"_OS\"\n",
     "    \n",
     "    ##### YOUR CODE HERE\n",
-    "\n",
+    "    for ex in corpus.get_examples_for_entities(kbt.sbj, kbt.obj):\n",
+    "        for word in ex.middle.split(' '):\n",
+    "            feature_counter[word+subject_object_suffix] += 1\n",
+    "    for ex in corpus.get_examples_for_entities(kbt.obj, kbt.sbj):\n",
+    "        \n",
+    "        for word in ex.middle.split(' '):\n",
+    "            feature_counter[word+object_subject_suffix] += 1\n",
     "\n",
     "    return feature_counter\n",
     "\n",
     "\n",
     "# Call to `rel_ext.experiment`:\n",
     "##### YOUR CODE HERE    \n",
-    "\n",
+    "directional_bow_results = rel_ext.experiment(\n",
+    "    splits,\n",
+    "    train_split = 'train',\n",
+    "    test_split = 'dev',\n",
+    "    featurizers=[directional_bag_of_words_featurizer],\n",
+    "    model_factory = model_factory,\n",
+    "    vectorize = True,\n",
+    "    verbose=True)\n",
     "\n"
    ]
   },
@@ -456,13 +479,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "import nltk\n",
     "def middle_bigram_pos_tag_featurizer(kbt, corpus, feature_counter):\n",
     "    \n",
     "    ##### YOUR CODE HERE\n",
-    "\n",
+    "    for ex in corpus.get_examples_for_entities(kbt.sbj, kbt.obj):\n",
+    "        \n",
+    "        for word in get_tag_bigrams(ex.middle_POS):\n",
+    "            feature_counter[word] += 1\n",
+    "    for ex in corpus.get_examples_for_entities(kbt.obj, kbt.sbj):\n",
+    "        for word in get_tag_bigrams(ex.middle_POS):\n",
+    "            feature_counter[word] += 1\n",
     "\n",
     "    return feature_counter\n",
     "\n",
@@ -474,10 +506,10 @@
     "    # The values of `start_symbol` and `end_symbol` are defined\n",
     "    # here so that you can use `test_middle_bigram_pos_tag_featurizer`.\n",
     "    start_symbol = \"<s>\"\n",
-    "    end_symbol = \"</s>\"\n",
-    "    \n",
-    "    ##### YOUR CODE HERE\n",
-    "\n",
+    "    end_symbol = \"</s>\" \n",
+    "    tag_list = list(nltk.bigrams([start_symbol]+get_tags(s)+[end_symbol])) \n",
+    "    result = [' '.join(tag) for tag in tag_list]\n",
+    "    return result\n",
     "\n",
     "\n",
     "    \n",
@@ -495,7 +527,14 @@
     "\n",
     "# Call to `rel_ext.experiment`:\n",
     "##### YOUR CODE HERE\n",
-    "\n",
+    "_ = rel_ext.experiment(\n",
+    "    splits,\n",
+    "    train_split = 'train',\n",
+    "    test_split = 'dev',\n",
+    "    featurizers=[middle_bigram_pos_tag_featurizer],\n",
+    "    model_factory = model_factory,\n",
+    "    vectorize = True,\n",
+    "    verbose=True)\n",
     "\n"
    ]
   },
@@ -569,8 +608,18 @@
     "def synset_featurizer(kbt, corpus, feature_counter):\n",
     "    \n",
     "    ##### YOUR CODE HERE\n",
-    "\n",
-    "\n",
+    "    for ex in corpus.get_examples_for_entities(kbt.sbj, kbt.obj):\n",
+    "        print(ex.middle_POS)\n",
+    "        for word in get_synsets(ex.middle_POS):\n",
+    "            wd = str(word)\n",
+    "            \n",
+    "            feature_counter[wd] += 1\n",
+    "            \n",
+    "    for ex in corpus.get_examples_for_entities(kbt.obj, kbt.sbj):\n",
+    "        for word in get_synsets(ex.middle_POS):\n",
+    "            wd = str(word)\n",
+    "            feature_counter[wd] += 1\n",
+    "    print('\\n')\n",
     "    return feature_counter\n",
     "\n",
     "\n",
@@ -582,10 +631,16 @@
     "    # Use `parse_lem` from the previous question to get a list of\n",
     "    # (word, POS) pairs. Remember to convert the POS strings.\n",
     "    wt = [parse_lem(lem) for lem in s.strip().split(' ') if lem]\n",
+    "   \n",
     "    \n",
     "    ##### YOUR CODE HERE\n",
-    "\n",
-    "\n",
+    "    result =[]\n",
+    "    for tag in wt:\n",
+    "        if tag != ',':\n",
+    "            result += wn.synsets(tag[0], pos=convert_tag(tag[1]))\n",
+    "    \n",
+    "    \n",
+    "    return result\n",
     "    \n",
     "    \n",
     "def convert_tag(t):\n",
@@ -609,6 +664,14 @@
     "\n",
     "# Call to `rel_ext.experiment`:\n",
     "##### YOUR CODE HERE    \n",
+    "_ = rel_ext.experiment(\n",
+    "    splits,\n",
+    "    train_split = 'train',\n",
+    "    test_split = 'dev',\n",
+    "    featurizers=[synset_featurizer],\n",
+    "    model_factory = model_factory,\n",
+    "    vectorize = True,\n",
+    "    verbose=True)\n",
     "\n",
     "\n"
    ]
@@ -634,6 +697,7 @@
     "    }\n",
     "    for ss, expected in test_cases.items():   \n",
     "        result = feature_counter[ss]\n",
+    "        \n",
     "        assert result == expected, \\\n",
     "            \"Incorrect count for {}: Expected {}; Got {}\".format(ss, expected, result)"
    ]
@@ -749,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   },
   "widgets": {
    "state": {},
