--- a/nli_02_models.ipynb
+++ b/nli_02_models.ipynb
@@ -446,7 +446,7 @@
    "source": [
     "def glove_leaves_phi(t1, t2, np_func=np.sum):\n",
     "    \"\"\"Represent `tree` as a combination of the vector of its words.\n",
-    "    \n",
+    "    A featurzer that 'preprocess'?\n",
     "    Parameters\n",
     "    ----------\n",
     "    t1 : nltk.Tree   \n",
@@ -467,10 +467,11 @@
     "    hyp_vecs = _get_tree_vecs(t2, glove_lookup, np_func)  \n",
     "    return np.concatenate((prem_vecs, hyp_vecs))\n",
     "    \n",
-    "    \n",
+    "#     searching for values that tree is in lookup(vector of words)\n",
     "def _get_tree_vecs(tree, lookup, np_func):\n",
     "    allvecs = np.array([lookup[w] for w in tree.leaves() if w in lookup])    \n",
     "    if len(allvecs) == 0:\n",
+    "#         no value found\n",
     "        dim = len(next(iter(lookup.values())))\n",
     "        feats = np.zeros(dim)    \n",
     "    else:       \n",
@@ -771,6 +772,8 @@
     "        hidden_dim=50)\n",
     "\n",
     "    X, y = zip(*train)\n",
+    "    #   X =to get tuple of pre and hypothesis\n",
+    "    #   y = result  \n",
     "    mod.fit(X, y)\n",
     "\n",
     "    X_test, y_test = zip(*test)\n",
@@ -1300,7 +1303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
