--- a/hw_wordentail.ipynb
+++ b/hw_wordentail.ipynb
@@ -167,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['dev', 'train'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wordentail_data['edge_disjoint'].keys()"
    ]
@@ -183,9 +194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['sweater', 'stroke'], 0],\n",
+       " [['constipation', 'hypovolemia'], 0],\n",
+       " [['disease', 'inflammation'], 0],\n",
+       " [['herring', 'animal'], 1],\n",
+       " [['cauliflower', 'outlook'], 0]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wordentail_data['edge_disjoint']['dev'][: 5]"
    ]
@@ -199,9 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nli.get_edge_overlap_size(wordentail_data, 'edge_disjoint')"
    ]
@@ -215,9 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2916"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nli.get_vocab_overlap_size(wordentail_data, 'edge_disjoint')"
    ]
@@ -231,9 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8470"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(wordentail_data['vocab'])"
    ]
@@ -247,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,9 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    14650\n",
+       "1     2745\n",
+       "Name: 1, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "label_distribution('edge_disjoint')"
    ]
@@ -273,9 +345,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['dev', 'train'])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wordentail_data['word_disjoint'].keys()"
    ]
@@ -289,9 +372,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nli.get_vocab_overlap_size(wordentail_data, 'word_disjoint')"
    ]
@@ -305,9 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nli.get_edge_overlap_size(wordentail_data, 'word_disjoint')"
    ]
@@ -321,9 +426,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    7199\n",
+       "1    1349\n",
+       "Name: 1, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "label_distribution('word_disjoint')"
    ]
@@ -361,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,9 +570,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Finished epoch 100 of 100; error is 0.023671276168897748"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.918     0.924     0.921      1910\n",
+      "           1      0.361     0.343     0.352       239\n",
+      "\n",
+      "    accuracy                          0.859      2149\n",
+      "   macro avg      0.640     0.634     0.637      2149\n",
+      "weighted avg      0.856     0.859     0.858      2149\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "word_disjoint_experiment = nli.wordentail_experiment(\n",
     "    train_data=wordentail_data['word_disjoint']['train'],\n",
@@ -494,27 +635,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
     "##### YOUR CODE HERE\n",
-    "\n",
-    "\n",
+    "def hypothesis_only(pre, hypo):\n",
     "    ##### YOUR CODE HERE\n",
-    "\n",
+    "    return hypo\n",
     "\n",
     "\n",
     "\n",
     "def run_hypothesis_only_evaluation():\n",
     "    ##### YOUR CODE HERE\n",
+    "    results = {}\n",
+    "    for cd_name in ('word_disjoint','edge_disjoint'):\n",
+    "        for fn_name in (vec_concatenate,hypothesis_only,vec_diff,vec_max):\n",
+    "            results[cd_name, fn_name.__name__] = nli.wordentail_experiment(\n",
+    "                train_data = wordentail_data[cd_name]['train'],\n",
+    "                assess_data = wordentail_data[cd_name]['dev'], \n",
+    "                model = LogisticRegression(),\n",
+    "                vector_func = glove_vec,\n",
+    "                vector_combo_func=fn_name\n",
+    "            )['macro-F1']\n",
+    "    return results\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,12 +686,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_run_hypothesis_only_evaluation(run_hypothesis_only_evaluation):\n",
     "    results = run_hypothesis_only_evaluation()\n",
+    "    print(results)\n",
     "    assert ('word_disjoint', 'vec_concatenate') in results, \\\n",
     "        \"The return value of `run_hypothesis_only_evaluation` does not have the intended kind of keys\"\n",
     "    assert isinstance(results[('word_disjoint', 'vec_concatenate')], float), \\\n",
@@ -548,9 +701,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 126,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.904     0.981     0.941      1910\n",
+      "           1      0.520     0.163     0.248       239\n",
+      "\n",
+      "    accuracy                          0.890      2149\n",
+      "   macro avg      0.712     0.572     0.595      2149\n",
+      "weighted avg      0.861     0.890     0.864      2149\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.893     0.989     0.939      1910\n",
+      "           1      0.382     0.054     0.095       239\n",
+      "\n",
+      "    accuracy                          0.885      2149\n",
+      "   macro avg      0.638     0.522     0.517      2149\n",
+      "weighted avg      0.836     0.885     0.845      2149\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.894     0.988     0.939      1910\n",
+      "           1      0.389     0.059     0.102       239\n",
+      "\n",
+      "    accuracy                          0.885      2149\n",
+      "   macro avg      0.641     0.524     0.520      2149\n",
+      "weighted avg      0.837     0.885     0.846      2149\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.897     0.985     0.939      1910\n",
+      "           1      0.462     0.100     0.165       239\n",
+      "\n",
+      "    accuracy                          0.887      2149\n",
+      "   macro avg      0.680     0.543     0.552      2149\n",
+      "weighted avg      0.849     0.887     0.853      2149\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.875     0.970     0.920      7376\n",
+      "           1      0.576     0.227     0.326      1321\n",
+      "\n",
+      "    accuracy                          0.857      8697\n",
+      "   macro avg      0.725     0.599     0.623      8697\n",
+      "weighted avg      0.830     0.857     0.830      8697\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.872     0.975     0.920      7376\n",
+      "           1      0.588     0.198     0.296      1321\n",
+      "\n",
+      "    accuracy                          0.857      8697\n",
+      "   macro avg      0.730     0.586     0.608      8697\n",
+      "weighted avg      0.828     0.857     0.826      8697\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.859     0.988     0.919      7376\n",
+      "           1      0.592     0.098     0.168      1321\n",
+      "\n",
+      "    accuracy                          0.853      8697\n",
+      "   macro avg      0.726     0.543     0.543      8697\n",
+      "weighted avg      0.819     0.853     0.805      8697\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.860     0.981     0.917      7376\n",
+      "           1      0.507     0.108     0.178      1321\n",
+      "\n",
+      "    accuracy                          0.849      8697\n",
+      "   macro avg      0.684     0.545     0.548      8697\n",
+      "weighted avg      0.806     0.849     0.804      8697\n",
+      "\n",
+      "{('word_disjoint', 'vec_concatenate'): 0.5945853477604687, ('word_disjoint', 'hypothesis_only'): 0.5169358178053831, ('word_disjoint', 'vec_diff'): 0.520210607190473, ('word_disjoint', 'vec_max'): 0.5521522901931928, ('edge_disjoint', 'vec_concatenate'): 0.6229358939558451, ('edge_disjoint', 'hypothesis_only'): 0.608109534157556, ('edge_disjoint', 'vec_diff'): 0.5434233117746536, ('edge_disjoint', 'vec_max'): 0.5475067665896061}\n"
+     ]
+    }
+   ],
    "source": [
     "test_run_hypothesis_only_evaluation(run_hypothesis_only_evaluation)"
    ]
@@ -572,25 +807,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vec_diff(u, v):\n",
     "    ##### YOUR CODE HERE\n",
+    "    return np.subtract(u,v)\n",
     "\n",
     "\n",
     "\n",
     "    \n",
     "def vec_max(u, v):\n",
     "    ##### YOUR CODE HERE\n",
+    "    return np.maximum(u,v)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,18 +934,23 @@
     "        \n",
     "        \"\"\"\n",
     "        ##### YOUR CODE HERE\n",
-    "\n",
+    "        return nn.Sequential(\n",
+    "            nn.Linear(self.input_dim,self.hidden_dim),\n",
+    "            nn.Dropout(self.dropout_prob),\n",
+    "            self.hidden_activation,\n",
+    "            nn.Linear(self.hidden_dim,self.n_classes_)\n",
+    "        )\n",
     "\n",
     "    \n",
     "\n",
-    "##### YOUR CODE HERE    \n",
+    "##### YOUR CODE HERE\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
