--- a/contextualreps.ipynb
+++ b/contextualreps.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0309 20:28:13.657829 140735854211968 file_utils.py:41] PyTorch version 1.3.0 available.\n",
-      "I0309 20:28:13.658627 140735854211968 file_utils.py:57] TensorFlow version 2.0.0 available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -148,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,18 +182,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71be41104a824a6a9722c70913de5707",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=213450.0, style=ProgressStyle(descripti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "hf_tokenizer = BertTokenizer.from_pretrained(hf_weights_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2da9f51d96624270b3bd4bef81470a51",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=433.0, style=ProgressStyle(description_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b21fc1c48414d0890037f68c7802935",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=435779157.0, style=ProgressStyle(descri…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "hf_model = BertModel.from_pretrained(hf_weights_name)"
    ]
@@ -216,13 +272,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Encode sentence 1. [SEP] And sentence 2!'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hf_example_texts = [\n",
     "    \"Encode sentence 1. [SEP] And sentence 2!\",\n",
-    "    \"Bert knows Snuffleupagus\"]"
+    "    \"Bert knows Snuffleupagus\"]\n",
+    "hf_example_texts[0]"
    ]
   },
   {
@@ -234,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +311,7 @@
        "[101, 13832, 13775, 5650, 122, 119, 102, 1262, 5650, 123, 106, 102]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +351,7 @@
        " '[SEP]']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +391,7 @@
        "dict_keys(['input_ids', 'token_type_ids', 'attention_mask'])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +419,7 @@
        " [101, 15035, 3520, 156, 14787, 13327, 4455, 28026, 1116, 102, 0, 0]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +446,7 @@
        "[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0]]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +494,7 @@
        "torch.Size([2, 12, 768])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,8 +614,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22min 28s, sys: 5.87 s, total: 22min 34s\n",
-      "Wall time: 5min 38s\n"
+      "CPU times: user 1h 18min 16s, sys: 57.5 s, total: 1h 19min 13s\n",
+      "Wall time: 19min 52s\n"
      ]
     }
    ],
@@ -564,8 +632,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 51s, sys: 681 ms, total: 2min 52s\n",
-      "Wall time: 43.1 s\n"
+      "CPU times: user 10min 50s, sys: 8.34 s, total: 10min 58s\n",
+      "Wall time: 2min 45s\n"
      ]
     }
    ],
@@ -598,15 +666,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Finished epoch 100 of 100; error is 3.4869229197502136"
+      "Finished epoch 100 of 100; error is 3.5395023226737976"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 45s, sys: 1.44 s, total: 1min 47s\n",
-      "Wall time: 15.4 s\n"
+      "CPU times: user 2min 14s, sys: 2min 21s, total: 4min 36s\n",
+      "Wall time: 41.6 s\n"
      ]
     }
    ],
@@ -634,13 +702,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.710     0.640     0.673       428\n",
-      "     neutral      0.331     0.218     0.263       229\n",
-      "    positive      0.676     0.858     0.756       444\n",
+      "    negative      0.720     0.638     0.677       428\n",
+      "     neutral      0.338     0.227     0.272       229\n",
+      "    positive      0.674     0.863     0.757       444\n",
       "\n",
-      "    accuracy                          0.640      1101\n",
-      "   macro avg      0.572     0.572     0.564      1101\n",
-      "weighted avg      0.617     0.640     0.621      1101\n",
+      "    accuracy                          0.643      1101\n",
+      "   macro avg      0.577     0.576     0.568      1101\n",
+      "weighted avg      0.622     0.643     0.625      1101\n",
       "\n"
      ]
     }
@@ -677,10 +745,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Finished epoch 100 of 100; error is 2.8084703385829926"
+      "Finished epoch 100 of 100; error is 2.8267590403556824"
      ]
     },
     {
@@ -689,16 +764,16 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.670     0.764     0.714       428\n",
-      "     neutral      0.333     0.205     0.254       229\n",
-      "    positive      0.714     0.759     0.736       444\n",
+      "    negative      0.671     0.769     0.717       428\n",
+      "     neutral      0.326     0.188     0.238       229\n",
+      "    positive      0.712     0.768     0.739       444\n",
       "\n",
-      "    accuracy                          0.646      1101\n",
-      "   macro avg      0.572     0.576     0.568      1101\n",
-      "weighted avg      0.618     0.646     0.627      1101\n",
+      "    accuracy                          0.648      1101\n",
+      "   macro avg      0.570     0.575     0.565      1101\n",
+      "weighted avg      0.616     0.648     0.626      1101\n",
       "\n",
-      "CPU times: user 27min 11s, sys: 7.76 s, total: 27min 19s\n",
-      "Wall time: 6min 39s\n"
+      "CPU times: user 1h 18min 37s, sys: 20min 15s, total: 1h 38min 52s\n",
+      "Wall time: 24min 21s\n"
      ]
     }
    ],
@@ -751,10 +826,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Finished epoch 50 of 50; error is 0.19242170546203852"
+      "Finished epoch 50 of 50; error is 0.09657298680394888"
      ]
     },
     {
@@ -763,16 +845,16 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.709     0.706     0.707       428\n",
-      "     neutral      0.322     0.249     0.281       229\n",
-      "    positive      0.715     0.802     0.756       444\n",
+      "    negative      0.757     0.720     0.738       428\n",
+      "     neutral      0.402     0.332     0.364       229\n",
+      "    positive      0.729     0.829     0.776       444\n",
       "\n",
-      "    accuracy                          0.649      1101\n",
-      "   macro avg      0.582     0.585     0.581      1101\n",
-      "weighted avg      0.631     0.649     0.638      1101\n",
+      "    accuracy                          0.683      1101\n",
+      "   macro avg      0.629     0.627     0.626      1101\n",
+      "weighted avg      0.672     0.683     0.675      1101\n",
       "\n",
-      "CPU times: user 54min 10s, sys: 2min 53s, total: 57min 4s\n",
-      "Wall time: 14min 26s\n"
+      "CPU times: user 1h 52min 27s, sys: 38min 33s, total: 2h 31min\n",
+      "Wall time: 36min 13s\n"
      ]
     }
    ],
@@ -801,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,22 +1052,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Finished epoch 4 of 4; error is 100.52562420163304"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 10h 16min 28s, sys: 38min 35s, total: 10h 55min 4s\n",
-      "Wall time: 2h 49min 37s\n"
+      "\r",
+      "Finished epoch 1 of 4; error is 390.094881772995"
      ]
     }
    ],
@@ -1002,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,26 +1086,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    negative      0.710     0.840     0.770       362\n",
-      "     neutral      0.402     0.372     0.387       247\n",
-      "    positive      0.854     0.770     0.810       492\n",
-      "\n",
-      "    accuracy                          0.704      1101\n",
-      "   macro avg      0.655     0.661     0.655      1101\n",
-      "weighted avg      0.705     0.704     0.702      1101\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(classification_report(hf_fine_tune_preds, y_hf_dev, digits=3))"
    ]
@@ -1851,7 +1909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
